# aws-c-http

./: .clang-tidy  .gitignore  .travis.yml  .tsan_suppressions.txt  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build-deps.sh  builder.json  cppcheck.sh  cpu_monitor.py  format-check.sh  sanitizer-blacklist.txt
.builder/action/: aws-c-http-test.py  aws-c-http-test.sh  local-server-setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: cert-renewal.yml  ci.yml  clang-asan-ubsan.yml  clang-format.yml  clang-tsan.yml  codeql.yml  integration-test.yml  mac-osx-ci.yml  stale_issue.yml
.travis/: travis_build.sh
cmake/: aws-c-http-config.cmake
codebuild/: common-linux.sh  common-macos.sh  common-posix.sh  common-windows.bat  linux-clang3-x64.yml  linux-clang6-x64.yml  linux-gcc-4x-x64.yml  linux-gcc-4x-x86.yml  linux-gcc-5x-x64.yml  linux-gcc-6x-x64.yml  linux-gcc-7x-x64.yml  linux-integration-tests.yml  windows-integ-test-localhost.yml  windows-msvc-2015-x86.yml  windows-msvc-2015.yml  windows-msvc-2017.yml
continuous-delivery/: build-elasticurl-manylinux-x64.yml  build-elasticurl-osx.sh  build-elasticurl-unix.sh  build-elasticurl-win64.bat  build-elasticurl-win64.sh
docs/: incremental_content_length.md  streaming_hot_loop_options.md
examples/: Makefile  README.md  curl_content_length_example  curl_content_length_example.c  curl_streaming_example  curl_streaming_example.c  output  test_server.py
examples/curl_streaming_example.dSYM/Contents/: Info.plist
examples/curl_streaming_example.dSYM/Contents/Resources/DWARF/: curl_streaming_example
examples/curl_streaming_example.dSYM/Contents/Resources/Relocations/aarch64/: curl_streaming_example.yml
include/aws/http/: connection.h  connection_buffered.h  connection_manager.h  decode.h  exports.h  hpack.h  http.h  http2_stream_manager.h  http_decode.h  message.h  proxy.h  proxy_connection.h  proxy_request_flow.h  proxy_strategy.h  queue.h  request_response.h  server.h  statistics.h  status_code.h  websocket.h
include/aws/http/private/: byte_vault.h  connection_impl.h  connection_manager_function_table.h  connection_manager_system_vtable.h  connection_monitor.h  decode.h  h1_connection.h  h1_decoder.h  h1_encoder.h  h1_monitor.h  h1_stream.h  h2_connection.h  h2_decoder.h  h2_encoder.h  h2_frames.h  h2_stream.h  hpack.h  hpack_header_static_table.def  hpack_huffman_static_table.def  http2_stream_manager_impl.h  http_impl.h  no_proxy.h  proxy_impl.h  random_access_set.h  request_response_impl.h  strutil.h  tracing.h  websocket_decoder.h  websocket_encoder.h  websocket_impl.h
integration-testing/: cm-integration-test-set.sh  config-local-host.sh  elasticurl_test.sh  http_client_canary.py  http_client_test.bash  http_client_test.py  http_proxy_env_setup.py  nginx.conf
source/: byte_vault.c  connection.c  connection_buffered.c  connection_h1.c  connection_manager.c  connection_monitor.c  decode.c  h1_connection.c  h1_decoder.c  h1_encoder.c  h1_monitor.c  h1_stream.c  h2_connection.c  h2_decoder.c  h2_encoder.c  h2_frames.c  h2_stream.c  hpack.c  hpack_decoder.c  hpack_dynamic_table.c  hpack_encoder.c  hpack_huffman_static.c  hpack_static_table.c  http.c  http2_stream_manager.c  http_decode.c  no_proxy.c  proxy_connection.c  proxy_strategy.c  queue.c  random_access_set.c  request_response.c  statistics.c  strutil.c  tracing.c  websocket.c  websocket_bootstrap.c  websocket_decoder.c  websocket_encoder.c
tests/: CMakeLists.txt  h2_test_helper.c  h2_test_helper.h  http_tests.c  http_tests.h  integration_test_proxy.c  local_test_proxy.c  main.c  proxy_test_helper.c  proxy_test_helper.h  stream_test_helper.c  stream_test_helper.h  test_connection.c  test_connection_manager.c  test_connection_monitor.c  test_decode.c  test_h1_client.c  test_h1_decoder.c  test_h1_encoder.c  test_h1_server.c  test_h2_client.c  test_h2_decoder.c  test_h2_encoder.c  test_h2_frames.c  test_h2_headers.c  test_hpack.c  test_hpack_echo.c  test_http.c  test_integration_proxy.c  test_localhost_integ.c  test_message.c  test_no_proxy.c  test_proxy.c  test_queue.c  test_random_access_set.c  test_request.c  test_slow_body_stream.c  test_stream_manager.c  test_strutil.c  test_tls.c  (+4 more)
tests/fuzz/: fuzz_h2_decoder.c  fuzz_h2_decoder_correct.c  fuzz_h2_decoder_random.c  fuzz_h2_frames.c
tests/local_host/: config-local-host.sh
tests/local_host/njs/: server.js
tests/localhost/: config-localhost.sh  nginx.conf
tests/mock_server/: README.md  h11mock_server.py  h2tls_mock_server.py
tests/py_localhost/: README.md  clear_server.py  localhost.crt  localhost.key  non_tls_server.py  server.py
tests/resources/: README  unittests.conf  unittests.crt  unittests.p12  unittests.readme
